apps/staging/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mealie.jameshomelab.org
  rules:
    - host: mealie.jameshomelab.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie
                port:
                  number: 9000
